--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head> Zara Celebi</head>
     <body> 
-        <p>To set up Visual Studio Code first you need to download it off the web, then you need to creat an empty folder. In Visual Code dont forget to download the LiveServer from the Extensions tab. Now go up to "file" then "open file" and select the file you created before. Then hover over the text of the file inside the "Explorer" and click on the file icon then name your new file "index.html" and you can start coding!
+        <p>To set up Visual Studio Code first you need to download it off the web, then you need to create an empty folder. In Visual Code dont forget to download the LiveServer from the Extensions tab. Now go up to "file" then "open file" and select the file you created before. Then hover over the text of the file inside the "Explorer" and click on the file icon then name your new file "index.html" and you can start coding!
 
         </p>
         <p> The console screen is used for testing, before you print anything on HTML you should print on the console screen first. To open the console screen you need to right click on the website and go to "inspect" then you need to go to the "colsole" tab on the top. to print anything on the console you need to write "console.log()" and put the var name inside the (). </p>
@@ -20,6 +20,15 @@
             var b = 5;
             var add = a + b;
             console.log(add);
+
+            var multiply = a * b;
+            console.log(multiply);
+
+            var subtract = a - b;
+            console.log(subtract);
+
+            var divide = a / b;
+            console.log(divide);
         </script>
 
         
