--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <p> The console screen is used for testing, before you print anything on HTML you should print on the console screen first. To open the console screen you need to right click on the website and go to "inspect" then you need to go to the "colsole" tab on the top. to print anything on the console you need to write "console.log()" and put the var name inside the (). </p>
         
         <script>
+            var first_console_project = "My first console project"
+            console.log(first_console_project);
             var first_name = "Zara";
-            console.log(first_name);
-
             var last_name = "Celebi";
-            console.log(last_name);
+            
 
             var full_name = first_name.concat(last_name);
             console.log(full_name);
